Update omap4 for custom kernel setup
Signed-off-by: Chet Kener <Cl3Kener@gmail.com>

--- a/arch/arm/configs/android_omap4_defconfig
+++ b/arch/arm/configs/android_omap4_defconfig
@@ -45,8 +45,26 @@ CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODULE_SRCVERSION_ALL=y
+CONFIG_IOSCHED_NOOP=y
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_FIFO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_TRIPNDROID=y
+# CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_FIFO is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_TRIPNDROID=y
+CONFIG_DEFAULT_IOSCHED="tripndroid"
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_ARCH_OMAP=y
@@ -102,6 +120,11 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_HOTPLUG=y
+CONFIG_CPU_FREQ_GOV_HYPER=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_VFPv3=y
@@ -133,6 +156,16 @@ CONFIG_NET_IPIP=y
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 # CONFIG_INET_LRO is not set
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_DEFAULT_VENO=y
+CONFIG_DEFAULT_TCP_CONG="veno"
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -497,6 +530,7 @@ CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_DYNAMIC_FSYNC=y
 
 #
 # Sound
